# frameit

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  environment.yaml  pyproject.toml
.github/workflows/: docs.yml
dev_files/: WORKFLOW.md  merge_to_main.sh
dev_files/DRAFT/: run.ipynb
dev_files/DRAFT/.cfgrib/: arome_BATSIRAI_20220201+0600P.grib.idx  arome_BATSIRAI_20220201+3000P.grib.idx  arome_BATSIRAI_20220201+4200P.grib.idx  arome_BATSIRAI_20220201+4800P.grib
dev_files/DRAFT/Extraction/: test_center2box.ipynb
dev_files/DRAFT/IO/: test_grib.ipynb  test_netcdf.ipynb
dev_files/DRAFT/Polar_proj/: test_mass_point_computation.ipynb  test_polar_grid_building.ipynb  test_polar_proj.ipynb  test_polar_vrad_vtan.ipynb
dev_files/DRAFT/Tracking/: create_prescribed_track.ipynb  test_Tracking.ipynb  test_enrich_kinematics.ipynb  test_prescribed_track_curved_batsirai.nc  test_prescribed_track_curved_belna.nc  test_prescribed_track_curved_chido.nc  test_prescribed_track_curved_ianos.nc  test_wind_pressure_tracker.ipynb
dev_files/configs_ktests/: arome_oper_belna.yml  mnh_chido.yml  mnh_ianos.yml
dev_files/scripts/: main.py
dev_files/tests/: conftest.py  test_integration_runner_multi_configs.py  test_units_config.py
docs/: docs-requirements.txt
docs/source/: conf.py  index.rst  what_is_frameit.rst
docs/source/_static/: custom.css
docs/source/developper/: how_to_add_my_tracker.rst
docs/source/tracker/: fixed_box.rst  (+3 more)
example/Ktests_cyclone/: viz.ipynb
example/config_file/: conf_example.yml
src/frameit/: __init__.py  __main__.py  _version.py  cli.py
(+63 files in other folders)
